Switched from japicmp to revapi